# motor_controller

./: .gitignore  CMakeLists.txt  Makefile  README.md
.devcontainer/: devcontainer.json
main/: CMakeLists.txt  Makefile  cmake_install.cmake  main  main.c
motor_controller/: CMakeLists.txt  motor_controller.c  motor_controller.h
test/: CTestTestfile.cmake  Makefile  cmake_install.cmake
test/suite_1/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  suite_1.c  suite_1_app
